[fix] Update slideShow.css to change overflow property from auto to hidden

--- a/css/slideShow.css
+++ b/css/slideShow.css
@@ -37,7 +37,7 @@
 	height: 100%;
 	min-height: 200px;
 	position: relative;
-	overflow: auto;
+	overflow: hidden;
 	display: flex;
 	align-items: center;
 	scroll-snap-type: x mandatory;
